# LightShow

./: .gitignore  CMakeLists.txt  gridState.h  led.h  ledGrid.h  main.cpp
deploy/: main.cpp
examples/: a01.exr  d01.exr  dia0_utt0.exr  f01.exr  h01.exr  n01.exr  sa01.exr  su01.exr
test/: CMakeLists.txt  main.cpp
train/: compute_mean.py  dataset.py  eval.py  helpers.py  loss.py  mobilenet_v1.py  model.py  preprocess.py  process_mp4.py  to_tflite.py  train.py
train/datasets/: dataset.py  dataset_handler.py  datasetv1.py  datasetv2.py  tfrecord.py
train/mobilenet/: conv_blocks.py  mobilenet.py  mobilenet_v2.py
